--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,8 @@
         android:theme="@style/Theme.TeamSns"
         tools:targetApi="31">
         <activity
-            android:name=".SignUpActivity"
-            android:exported="false" />
+            android:name=".DetailPageActivity"
+            android:exported="false"/>
         <activity
             android:name=".SignInActivity"
             android:exported="true">
@@ -25,9 +25,11 @@
         </activity>
         <activity
             android:name=".ChooseProfileActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".SignUpActivity"
             android:exported="false" />
         <activity
-
             android:name=".MainPageActivity"
             android:exported="false">
         </activity>
