--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,26 +13,32 @@
         android:theme="@style/Theme.TeamSns"
         tools:targetApi="31">
         <activity
+            android:name=".PostPopUpActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PostPageActivity"
+            android:exported="false" />
+        <activity
             android:name=".DetailPageActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".SignInActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".ChooseProfileActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".SignUpActivity"
             android:exported="false" />
         <activity
             android:name=".MainPageActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false" />
     </application>
 
 </manifest>
